# AI-Powered-Trade-Route-Recommendation-System

trade_reccommendation_sys/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
trade_reccommendation_sys/configs/: logging_config.yaml  model_config.yaml  pipeline_config.yaml
trade_reccommendation_sys/deployments/docker/: Dockerfile  docker-compose.yml
trade_reccommendation_sys/docs/: data_dictionary.md
trade_reccommendation_sys/scripts/: build_graph.py  setup_data.sh
trade_reccommendation_sys/tests/: conftest.py
trade_route_sys_env/: pyvenv.cfg
trade_route_sys_env/Scripts/: activate  activate.bat
